fix footer form css wrap

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ html {
   scroll-behavior: smooth;
 }
 .body {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -238,7 +238,7 @@ button {
   }
 
   .current::after {
-    content: "";
+    content: '';
     position: absolute;
     left: 0;
     bottom: 0px;
@@ -256,7 +256,7 @@ button {
     position: relative;
   }
   .currents::before {
-    content: "";
+    content: '';
     position: absolute;
     left: 0;
     bottom: 0px;
@@ -328,8 +328,8 @@ button {
       rgba(30, 24, 35, 0.4)
     ),
     image-set(
-      url("../img/background/hero-bg_mobwebp@1x.webp") type("image/webp") 1x,
-      url("../img/background/hero-bg_mob@1x.jpg") 1x
+      url('../img/background/hero-bg_mobwebp@1x.webp') type('image/webp') 1x,
+      url('../img/background/hero-bg_mob@1x.jpg') 1x
     );
   background-size: cover;
   background-repeat: no-repeat;
@@ -343,8 +343,8 @@ button {
         rgba(30, 24, 35, 0.4)
       ),
       image-set(
-        url("../img/background/hero-bg_mobwebp@2x.webp") type("image/webp") 2x,
-        url("../img/background/hero-bg_mob@2x.jpg") 2x
+        url('../img/background/hero-bg_mobwebp@2x.webp') type('image/webp') 2x,
+        url('../img/background/hero-bg_mob@2x.jpg') 2x
       );
     margin-bottom: 40px;
   }
@@ -357,7 +357,7 @@ button {
 .hero-title {
   font-weight: 500;
   font-size: 20px;
-  width: 291px;
+  max-width: 291px;
   line-height: 1.2;
   letter-spacing: -0.03em;
   color: #fff;
@@ -460,8 +460,8 @@ button {
         rgba(30, 24, 35, 0.4)
       ),
       image-set(
-        url("../img/background/hero-bg_tabwebp@1x.webp") type("image/webp") 1x,
-        url("../img/background/hero-bg_tab@1x.jpg") 1x
+        url('../img/background/hero-bg_tabwebp@1x.webp') type('image/webp') 1x,
+        url('../img/background/hero-bg_tab@1x.jpg') 1x
       );
     max-width: 704px;
     padding-top: 671px;
@@ -476,8 +476,8 @@ button {
           rgba(30, 24, 35, 0.4)
         ),
         image-set(
-          url("../img/background/hero-bg_tabwebp@2x.webp") type("image/webp") 2x,
-          url("../img/background/hero-bg_tab@2x.jpg") 2x
+          url('../img/background/hero-bg_tabwebp@2x.webp') type('image/webp') 2x,
+          url('../img/background/hero-bg_tab@2x.jpg') 2x
         );
     }
   }
@@ -510,8 +510,8 @@ button {
         rgba(30, 24, 35, 0.4)
       ),
       image-set(
-        url("../img/background/hero-bg_deskwebp@1x.webp") type("image/webp") 1x,
-        url("../img/background/hero-bg_desk@1x.jpg") 1x
+        url('../img/background/hero-bg_deskwebp@1x.webp') type('image/webp') 1x,
+        url('../img/background/hero-bg_desk@1x.jpg') 1x
       );
 
     max-width: 1136px;
@@ -526,8 +526,8 @@ button {
         rgba(30, 24, 35, 0.4)
       ),
       image-set(
-        url("../img/background/hero-bg_deskwebp@2x.webp") type("image/webp") 2x,
-        url("../img/background/hero-bg_desk@2x.jpg") 2x
+        url('../img/background/hero-bg_deskwebp@2x.webp') type('image/webp') 2x,
+        url('../img/background/hero-bg_desk@2x.jpg') 2x
       );
   }
 }
@@ -610,7 +610,7 @@ button {
     position: relative;
   }
   .benefiets-item:not(:last-child):after {
-    content: "";
+    content: '';
     border: 1px solid rgba(255, 255, 255, 0.5);
     width: 0px;
     height: 124px;
@@ -712,7 +712,7 @@ button {
   margin-right: auto;
 }
 .taste-subtitle {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   font-size: 14px;
 
@@ -908,7 +908,7 @@ button {
   margin-bottom: 18px;
 }
 .subtitle-made-text::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 8px;
   left: -8px;
@@ -1457,8 +1457,10 @@ button {
 .footer-form {
   display: flex;
   align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
 
-  gap: 8px;
+  gap: 10px 8px;
 }
 .footer-input {
   border: 1.5px solid rgba(255, 255, 255, 0.15);
